user management backend config
Signed-off-by: MohammedAbdi <mohammma@usc.edu>

--- a/charts/spire/charts/spire-server/templates/tornjak-config.yaml
+++ b/charts/spire/charts/spire-server/templates/tornjak-config.yaml
@@ -42,5 +42,12 @@ data:
         }
       }
     {{- end }}
+    {{- if .Values.tornjak.config.userManagement }}
+      UserManagement "KeycloakAuth" {
+        plugin_data {
+          issuer = "{{ .Values.tornjak.config.userManagement.issuer }}"
+        }
+      }
+    {{- end }}
     }
 {{- end }}
