--- a/examples/tornjak/values.yaml
+++ b/examples/tornjak/values.yaml
@@ -4,6 +4,7 @@ spire-server:
 
 tornjak-frontend:
   enabled: true
+  apiServerURL: "http://localhost:10000"
   service:
     type: ClusterIP
     port: 3000
